# trino-deploy

./: .gitignore  README.md  configure.sh  ec2_reconfigure.sh  ec2_seed.sh  fetch.sh  launcher.sh  pyproject.toml  seed.sh  trino_ec2_seed.sh  wrapper.sh
parallel_deploy/: hosts.json  parallelops.py
templates/etc/: config.properties  jvm.config
templates/presto/: configure.sh
templates/presto/template/etc/: config.properties  jvm.config
templates/presto/template/etc/catalog/: tpch.properties
templates/trino/: configure.sh
templates/trino/template/etc/: config.properties  node.properties
templates/trino/template/etc/catalog/: jmx.properties
