[tool.poetry]
name = "trino-deploy"
version = "0.1.0"
description = ""
authors = ["Anant Aneja <1797669+aaneja@users.noreply.github.com>"]
packages = [{include = "parallel_deploy"}]

[tool.poetry.dependencies]
python = "^3.10"
parallel-ssh = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
